# thrds

./: README.md  pyproject.toml
.github/workflows/: release.yml
specs/: bsky-client-and-extras.md  preserve-foreign-messages.md  slack-editable-bot-messages.md  thrds.md
specs/done/: bot-token-prefix.md  diff-preview.md  discord-rate-limits.md  discord-suppress-embeds.md  discord-system-messages.md  linked-summary.md  linked-title-format.md  orphan-guard.md  reference-crashes-impl.md  request-throttle.md  slack-get-methods.md  slack-permalink.md  slack-rate-limits.md  slack-sync-linked-preserve-op.md  slack-unfurl.md  sync-linked-edit-back-pace.md  sync-linked-stale-ids.md
tests/: test_bsky.py  test_foreign_messages.py  test_linked.py  test_orphan_guard.py  test_sync.py
thrds/: __init__.py  bsky.py  core.py  discord.py  linked.py  protocol.py  slack.py
